fix: link locations before publishing VideoSubmitted event (#50)
* fix(video): link locations before publishing VideoSubmitted event (#49)

* refactor(video): remove redundant addLocationInternal from controller (#49)

Location linking is now handled inside VideoService.createVideo(),
so the controller no longer needs to call it separately.

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>